# llm-quickstart

./: .gitignore  README.md  pyproject.toml  requirements.txt
transformers/: pipelines.ipynb
