[project]
name = "llm-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "ipywidgets>=8.0.0",
    "tqdm>=4.64.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
]
